What's new:
- change homepage carousel style
- update image with 16/9 aspect ratio